# m40-llm

./: .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cog.toml
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/workflows/: ci.yml  commitlint.yml
benches/: attention.rs  gemm.rs  gemm_fallback.rs  persistent_decode.rs  q8_projection.rs  rmsnorm.rs  stream_overlap.rs
cuda/: common.h  kernels.cu  stub.c
docs/: cuda_parity_and_kv_layout.md  device_selection.md  diagnostics.md  kv_compression.md  minimal_forward.md  perf_baselines.md  roadmap.md
examples/: query_props.rs
llm-context/: 00-index.md  01-machine_context_summary.md  02-hardware-hacks.md  02-scope-and-hardware-hacks.md  02b-cuda-rust-architecture.md  03-project-skeleton.md  04-ring-buffer.md  05-attention-and-kv-cache.md  06-parallelization.md  07-rust-interfaces.md  08-minimal-decode.md  09-recap.md  10-rename-api.md  11-device-allocator.md  12-new-allocator.md  13-real-gguf.md  14-cuda-kernels.md  15-dtype-consistency.md  16-tests.md  17-convert-attention-kernel.md
scripts/: bench_server_batch_decode.sh  dev-env.sh  finalize-commit  test_memory.sh
src/: cli.rs  cuda.rs  decode.rs  decode_batch.rs  decode_session.rs  generate.rs  gguf.rs  gguf_ext.rs  infer.rs  kv_compression.rs  kv_selection.rs  kvcache.rs  lib.rs  main.rs  model.rs  profile.rs  sampling.rs  server.rs  timing.rs  tokenizer.rs
src/infer/: backend.rs  batch.rs  embeddings.rs  forward.rs  gemm.rs  kv.rs  load.rs  logits.rs  mapping.rs  meta.rs  mod.rs  tensor_views.rs  types.rs  workspace.rs
tests/: attention_batched_varlen.rs  attention_last_token.rs  attention_last_token_cpu.rs  attention_parity_cpu_grid.rs  attention_parity_cuda_grid.rs  attention_prefill_varlen.rs  batch_metadata.rs  cast_kernel.rs  cuda_elementwise.rs  cuda_env.rs  cuda_smoke.rs  decode_loop.rs  decode_stopping.rs  e2e_decode_tokens_cpu.rs  e2e_decode_tokens_cuda.rs  embedding_dequant_cuda.rs  forward_minimal.rs  forward_parity_toy.rs  forward_with_layer_smoke.rs  gemm_f16xf16_f32.rs  gemm_fallback.rs  gemm_layout.rs  gemm_mixed.rs  gguf_device_views.rs  gguf_device_views_cuda.rs  gguf_device_views_offsets.rs  gguf_ext_metadata.rs  gguf_ext_smoke.rs  gguf_metadata_config.rs  gguf_typed_config_cuda_smoke.rs  gguf_typed_config_validation.rs  infer_metadata_validation.rs  integration_test.rs  kv_compression_long_context.rs  kv_f32_to_f16_append.rs  kv_layout.rs  llama3_tokenizer_prompt.rs  map_standard_layer.rs  mlp_wrappers.rs  model_config_parsing.rs  (+15 more)
tests/common/: tiny_gguf.rs
