[package]
name = "m40-llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "m40_llm"
path = "src/lib.rs"

[[bin]]
name = "m40-llm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
bytes = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"

# For filesystem paths & dirs
directories = "5"

[build-dependencies]
cc = "1"

[[test]]
name = "m40-llm"
path = "tests/integration_test.rs"
