[package]
name = "m40-llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "m40_llm"
path = "src/lib.rs"

[[bin]]
name = "m40-llm"
path = "src/main.rs"

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies]
chrono = { version = "0.4", optional = true, features = ["serde", "clock"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
bytes = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-stream = "0.1"
half = "2"

# For filesystem paths & dirs
directories = "5"

# Optional GGUF integration crates
# Keep optional and gated behind `gguf_ext` feature so default builds remain slim
# Exact versions kept flexible for now; can pin after first compile/integration pass
gguf-llms = { version = "0.0.2", optional = true }
# gguf-rs-lib provides file reader and helpers; version as discovered via crates.io
# If the exact name differs (e.g., gguf-rs), we will adjust after attempting build
gguf-rs-lib = { version = "0.2", optional = true }

[features]
logging = ["chrono"]
nvcc = []
server = ["dep:axum", "dep:tower-http"]
cuda = ["dep:cc"]  # Enable CUDA compilation support
# Enable extended GGUF integration via external crates
# Off by default to keep minimal deps for non-integration builds
gguf_ext = ["dep:gguf-llms", "dep:gguf-rs-lib"]

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.tower-http]
version = "0.5"
features = ["cors", "set-header"]
optional = true


[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "gemm_fallback"
harness = false


[[test]]
name = "m40-llm"
path = "tests/integration_test.rs"
